[project]
name = "uv250117-astral"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fireducks>=1.1.7",
    "ipykernel>=6.29.5",
    "lxml>=5.3.0",
    "plotly>=5.24.1",
    "polars>=1.20.0",
    "streamlit>=1.41.1",
    "tqdm>=4.67.1",
]
